--- a/rebar.config
+++ b/rebar.config
@@ -3,6 +3,7 @@
 {deps, [
 	{webmachine, "1.10.*", {git, "git://github.com/basho/webmachine", "HEAD"}}
 	,{amqp_client, ".*", {git, "git://github.com/jbrisbin/amqp_client.git", {tag, 
-"rabbitmq-3.4.0-community"}}}
+		"rabbitmq-3.4.0-community"}}}
+        ,{pooler, ".*", {git, "git://github.com/seth/pooler", "HEAD"}}
 
 ]}.
